Particles and web EN version :heart:

--- a/es.html
+++ b/es.html
@@ -48,7 +48,7 @@
                 <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
                 <li><a class="smoothscroll"  href="#blog" title="blog">Blog</a></li>
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
-                <li><a title="Español" href=es.html ><img  width = "25" height = "5" src="images/bandera.png"></a></li>
+                <li><a title="English" href=index.html ><img  width = "25" height = "5" src="images/banderaen.png"></a></li>
             </ul>
         </nav>
 
@@ -78,9 +78,9 @@
                 <h3>Hi there!</h3>
 
                 <h1>
-                    I am Unai González. <br>
-                    I am a graphic designer <br>
-                    and 3D modeller based in Cáceres.
+                    Soy Unai González. <br>
+                    Un diseñador gráfico <br>
+                    y modelador 3D en Cáceres.
                 </h1>
 
                 <div class="home-content__buttons">
