--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
-                <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-                <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
-                <li><a class="smoothscroll"  href="#blog" title="blog">Blog</a></li>
-                <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
+                <li class="current"><a class="smoothscroll"  href="#home" title="home">Home 🏠</a></li>
+                <li><a class="smoothscroll"  href="#about" title="about">About ❤️</a></li>
+                <li><a class="smoothscroll"  href="#works" title="works">Works 💪</a></li>
+                <li><a class="smoothscroll"  href="#blog" title="blog">Blog 🔓</a></li>
+                <li><a class="smoothscroll"  href="#contact" title="contact">Contact ☎️</a></li>
                 <li><a title="Español" href=es.html ><img  width = "25" height = "5" src="images/bandera.png"></a></li>
             </ul>
         </nav>
@@ -134,15 +134,27 @@
         <div class="row about-content">
 
             <div class="col-six tab-full left">
-                <h3>Howdy!</h3>
+                <h3>Howdy!✨ </h3>
 
-                <p>Lorem ipsum Ut eiusmod ex magna sit dolor esse adipisicing minim ad cupidatat eu veniam nostrud mollit laboris sunt magna velit culpa consectetur nostrud consectetur labore sed do.</p>
-
-                <p>
-                Lorem ipsum Nisi officia Duis irure voluptate dolor commodo pariatur occaecat aliquip adipisicing voluptate Ut in qui ea sint occaecat in commodo in in in incididunt ut sunt in Ut Duis in ut ex qui anim cupidatat cupidatat ex in non dolore labore ea amet cillum ea qui dolor nisi sed velit mollit exercitation ex fugiat labore in deserunt culpa laborum culpa anim dolore laboris amet irure mollit proident velit fugiat aute ea elit magna consequat qui officia quis elit Duis dolor esse cupidatat tempor proident voluptate aliqua ex cupidatat do eiusmod veniam irure laborum ut magna nostrud dolore ullamco commodo elit sit magna aliqua laborum veniam officia dolor.	
+                <p>I am Unai González, 
+                    <br>
+                    I was born on August 12, 2004 in Vitoria, sice I was a child, all related to technology was my passion, and nowadays the techology still in my heart like when I was young.
+                    <br>
+                    I am a friendly, creative person and always eager to work, I always do my best in every job I do, because 
+                    I am a very detailed person.
+                    <br>
+                     I have experience using graphic programs like Photoshop and video editing like Premiere.
+                    <br>
+                    I know how to create PBR spaces such as photoreal renders in Blender, I use Substance Painter to create PBR textures for my works. 
+                    <br>
+                    Relative to the web, I know how to create HTML5 and CCS pages with JavaScript.
+                    I am looking forward to working with you!
                 </p>
             </div>
-
+            <br>
+            <div class="Foto" >
+                <img height= "300" width="300" src="images/circle.png" />
+            </div>
             <div class="col-six tab-full right">
                 <h3>I've Got Some skills.</h3>
 
@@ -157,20 +169,16 @@
                     </li>
                     <li>
                     <div class="progress percent70"><span>70%</span></div>
-                    <strong>JQuery</strong>
+                    <strong>Adobe Photoshop</strong>
                     </li>
                     <li>
                     <div class="progress percent95"><span>95%</span></div>
-                    <strong>PHP</strong>
+                    <strong>Blender</strong>
                     </li>
                     <li>
                     <div class="progress percent75"><span>75%</span></div>
-                    <strong>Wordpress</strong>
-                    </li>   
-                    <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>Angular JS</strong>
-                    </li>   
+                    <strong>Substance Painter 3D</strong>
+                    </li>    
                 </ul>
             </div>
 
@@ -191,64 +199,31 @@
 
             <div class="col-full text-center">
                 <h3>My experience.</h3>
+             
+                    <div class="timeline__header">
+                        <p class="timeline__timeframe">July 2015 - Present</p>
+                        <h3>Awesome Studio</h3>
+                        <h5>Lead Designer</h5>
+                    </div>
+                    <div class="timeline__desc">
+                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                    </div>
+                    <br>
+                </div> <!-- end timeline__block -->
+
+               <div class="timeline__header">
+                        <p class="timeline__timeframe">July 2014 - June 2015</p>
+                        <h3>Super Cool Agency</h3>
+                        <h5>Front-end Developer</h5>
+                    </div>
+                    <div class="timeline__desc">	
+                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                    </div>
+                </div> 
             </div>
-
-            <div class="col-six tab-full center">
-                <div hidden class="timeline">
-
-                    <div class="timeline__block">
-                        <div class="timeline__bullet"></div>
-                        <div class="timeline__header">
-                            <p class="timeline__timeframe">July 2015 - Present</p>
-                            <h3>Awesome Studio</h3>
-                            <h5>Lead Designer</h5>
-                        </div>
-                        <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
-                        </div>
-                    </div> <!-- end timeline__block -->
-
-                   <div class="timeline__block">
-                    <div class="timeline__bullet"></div>
-                        <div class="timeline__header">
-                            <p class="timeline__timeframe">July 2014 - June 2015</p>
-                            <h3>Super Cool Agency</h3>
-                            <h5>Front-end Developer</h5>
-                        </div>
-                        <div class="timeline__desc">	
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-                        </div>
-                    </div> 
 
                 </div> <!-- end timeline -->
             </div> <!-- end left -->
-
-            <div class="col-six tab-full right">
-                <div class="timeline">
-
-                    <div class="timeline__block">
-                        <div class="timeline__bullet"></div>
-                        <div class="timeline__header">
-                            <p class="timeline__timeframe">July 2012 - June 2014</p>
-                            <h3>Great Design Studio</h3>
-                            <h5>Web Designer</h5>
-                        </div>
-                        <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
-                        </div>
-                    </div> <!-- end timeline__block -->
-
-                    <div class="timeline__block">
-                        <div class="timeline__bullet"></div>
-                        <div class="timeline__header">
-                            <p class="timeline__timeframe">July 2011 - June 2012</p>
-                            <h3>Epic Design Agency</h3>
-                            <h5>Web Designer</h5>
-                        </div>
-                        <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-                        </div>
-                    </div> <!-- end timeline__block -->
 
                 </div> <!-- end timeline -->
             </div> <!-- end right -->
